k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: microservices
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - microservices.example.com
      secretName: microservices-tls
  rules:
    - host: microservices.example.com
      http:
        paths:
          - path: /api/students(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: python-app-svc
                port:
                  number: 80

          - path: /api/courses(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nodejs-app-svc
                port:
                  number: 80

          - path: /api/enrolments(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nodejs-app-svc
                port:
                  number: 80

          - path: /api/reports(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dotnet-app-svc
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
